--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,4 +11,4 @@ workflows:
     publishing:
       email:
         recipients:
-          - codemagic@example.com
+          - ratneshkarbhari74@gmail.com
