--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tech.codesevaco.astro_app">
    <application
+        android:usesCleartextTraffic="true"
         android:label="astro_app"
         android:icon="@mipmap/ic_launcher">
         <activity
