--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_messaging: ^9.1.0
   http: ^0.13.1
   shared_preferences: ^2.0.5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
