--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,14 @@ dependencies:
     sdk: flutter
   carousel_slider: ^3.0.0
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.0.2
+  firebase_core: ^1.0.2  
   firebase_messaging: ^9.1.0
   http: ^0.13.1
   shared_preferences: ^2.0.5
   intl: ^0.17.0
+  flutter_local_notifications: ^5.0.0
+
+
 
 dev_dependencies:
   flutter_test:
