--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^3.0.0
-  cupertino_icons: ^1.0.2
-  firebase_core: ^1.0.2  
-  firebase_messaging: ^9.1.0
-  http: ^0.13.1
-  shared_preferences: ^2.0.5
+  cupertino_icons: ^1.0.0
+  flutter_local_notifications: ^4.0.1+1
+  http: ^0.12.0
+  shared_preferences: ^0.5.12+4
+  firebase_messaging: ^7.0.3
   intl: ^0.17.0
-  flutter_local_notifications: ^5.0.0
 
 
 
